# CVPR22-Fact

./: .gitignore  BASE_FACT_COMPARISON_README.md  BASE_FACT_DIFFERENCES.md  CLAUDE.md  CONFIG_GUIDE.md  CONFUSION_ANALYSIS_README.md  Dockerfile  MAKEFILE_README.md  Makefile  QUICK_START.md  analyze_existing_results.py  compare_base_fact.py  compare_base_fact_fixed.py  compare_base_fact_separate.py  compose.yaml  create_base_session_file.py  create_session_files.py  dqn_classifier.py  dvc.yaml  dvc_workaround.py  evaluate_with_session0.py  example_unknown_detection.py  export_feature_names.py  parameter_search.py  params.yaml  pyproject.toml  readme.md  run_confusion_analysis.py  split_cicids2017.py  step_by_step_training.ipynb  train.py  train_and_evaluate.ipynb  train_base_session.py  train_new_sessions.py  utils.py  visualize_confusion_matrix.py
.cursor/rules/: code-style.mdc  project-structure.mdc  uv-run-default.mdc
.dvc/: config
claude/: CHANGELOG_DVC.md  DIRECTORY_STRUCTURE_UPDATE.md  DVC_IMPLEMENTATION_SUMMARY.md  DVC_PARAMS_SEPARATION.md  PARAMS_YAML_INTEGRATION.md  README.md  SESSION_FILES_STRUCTURE.md
data/: .gitignore
dataloader/: data_utils.py  sampler.py
models/: cnn1d_encoder.py  mlp_encoder.py  resnet18_encoder.py  resnet20_cifar.py
notebooks/: cicids_rl_classifier.ipynb  fact_rl_incremental.ipynb  test.ipynb
scripts/: config_utils.py  create_session_indices.py
tests/: test_cicids2017.py  test_config_integration.py  test_confusion_matrix.py  test_confusion_matrix_ticks.py  test_save_path.py  test_save_path_simple.py  test_session_detailed.py
(+23 files in other folders)
